--- a/.env.dev
+++ b/.env.dev
@@ -2,6 +2,10 @@
 NODE_ENV='dev'
 
 # 服务端口号
-VITE_APP_PORT = 5173
+VITE_APP_PORT=5173
+
 # 后端服务地址
-VITE_APP_SERVICE_API = 'http://localhost:88/api'
+VITE_APP_SERVICE_API='http://localhost:88/api'
+
+# 后端图片服务访问地址
+VITE_IMG_URL='http://localhost:88/api/picture/'
