--- a/.env.prod
+++ b/.env.prod
@@ -2,6 +2,10 @@
 NODE_ENV='prop'
 
 # 服务端口号
-VITE_APP_PORT = 5174
+VITE_APP_PORT=5174
+
 # 后端服务地址
-VITE_APP_SERVICE_API = 'http://localhost:88/api'
+VITE_APP_SERVICE_API='http://localhost:88/api'
+
+# 后端图片服务访问地址
+VITE_IMG_URL='http://localhost:88/api/picture/'
